Dockerfile & docker compose
Adapt configuration for tests purposes
Justfile to simplificate flow

--- a/conf.ini
+++ b/conf.ini
@@ -1,7 +1,7 @@
 [config]
 github_api_url = https://api.github.com/repos/
-smtp_port = 25
-smtp_server = localhost
+smtp_port = 1025
+smtp_server = mailhog
 sender_email = sender@host.eu
 receiver_email = receiver@anotherhost.eu
 
