--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3'
 services:
   notifier:
     build: .
-    image: github-release-notifier:1
+    image: github-release-notifier
     container_name: github-release-notifier
     volumes:
     - ./conf.ini:/app/conf.ini
